--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -1,1 +1,238 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    -->
+    <script src="js/2.1.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
+    <title>QPQC-2019</title>
+    <style type="text/css">
+	.navbar-collapse li ul{
+			display:none;
+			height:auto;
+			width: auto;
+			position:absolute;
+			width:100px;
+			z-index:200;
+			margin:0px;
+			list-style-type: none;
+		}
+	.navbar-collapse li:hover ul{
+			display:block;
+		}
+	 .section{
+		 margin: 0 22%;
+	    }
+	.section1{
+			 margin-left: 900px;
+	}
+	</style>
+</head>
 
+<body background="image/会议背景11.jpg">
+<div >
+    <header style="min-height: 76px;">
+        <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">切换导航</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>  -->
+                </div>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li><a href="index.html">
+                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                             <li class="submenu">
+                                    <a href="News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="Conference.html">Conferences</a>
+			</li>
+                        <li class="submenu">
+                            <a href="Training-Camp.html">Training Camp</a>
+                        </li>
+                        <li class="submenu">
+                               <a href="Research.html">Research</a>
+                         </li>
+			 <li class="submenu">
+                               <a href="About us Introduction.html">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.container-->
+        </nav>
+    </header>
+    <div id="introdution">
+        <div class="introdution">
+            <div id="theme">
+<!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
+                <p style="text-align: center; margin-top: 10px;" >The 3rd International Forum on Frontiers of Lattice-based Cryptography and Homomorphic Encryption</p>
+                <p style="text-align: center;text-indent:2em; " >第三届格与全同态加密国际前沿论坛</p>
+                <hr/>
+                <p style="text-indent:2em; line-height:150%;"  >随着量子计算的快速发展，量子模拟计算和量子计算架构的逐步实现。现有密码系统的安全性受到巨大威胁。如何在后量子时代来临之际，保障数据的机密性、完整性和密文数据的有效处理和利用，是学术界和工业界面临的研究热点和迫切需要解决的问题。<br/>
+                    &emsp; &emsp;基于格的后量子密码和全同态加密，为实现数据加密、数据完整性验证和加密数据的有效利用和处理，提供了可能的解决方案。本届论坛将就格密码和全同态加密及其应用等问题展开讨论和交流。论坛将于2019年9月21-22日在广州举行，由华南农业大学数学与信息学院承办。论坛邀请国内外多为从事格基密码与全同态加密研究的知名学者做特邀报告，内容涵盖格基密码、全同态加密、多变量密码和量子计算等多个涉及后量子和量子计算领域。
+                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
+                </p>
+            </div>
+        </div>
+        <div class="main2">
+            <div id="main2">
+                <div id="contents" class="personnel1">
+                    <p class="organization">论坛组委会<br/></p>
+                    <p align="center">丁津泰&nbsp&nbsp王&emsp;杰&nbsp&nbsp孔凡玉&nbsp&nbsp冯荣权&nbsp&nbsp吕述望&nbsp&nbsp任&emsp;奎&nbsp&nbsp许春香<br/></p>
+                    <p align="center">李&emsp;超&nbsp&nbsp来学嘉&nbsp&nbsp吴文玲&nbsp&nbsp张方国&nbsp&nbsp陈克非&nbsp&nbsp林东岱&nbsp&nbsp胡&emsp;磊<br/></p>
+                    <p align="center">徐茂智&nbsp&nbsp徐秋亮&nbsp&nbsp高绪洪&nbsp&nbsp曹珍富&nbsp&nbsp戚文峰&nbsp&nbsp;薛&emsp;锐&nbsp&nbsp林&emsp;聪<br/></p>
+                    <br/><br/>
+                    <p class="organization">论坛组织<br/></p>
+                    <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                    <p align="center">黄琼 （华南农业大学）<br/></p>
+					<p align="center">唐春明 (广州大学)<br/></p>
+					<p align="center">蒋林智 (University of Surrey)<br/></p>
+                    <br/>
+		    <div class="section">
+                    <p align="left">论坛时间：2019年9月21-22日。<br/></p>
+                    <p align="left">论坛地点：嘉鸿华美达广场酒店(广州市天河区瘦狗岭路313号)<br/></p>
+                    <p align="left">报到时间：2019年9月20日 14：30 嘉鸿华美达广场酒店大堂。<br/></p>
+                    <p align="left">建议住宿：嘉鸿华美达广场酒店(单人间：450元/天，含早；标准间：450元/天，含早；)<br/></p>
+                    <p align="left">注册费用：注册费：1500元/人，参会人员交通和食宿自理。<br/></p>
+                    <p align="left">公司名称：广州翔羽会议策划服务有限公司<br/></p>
+                    <p align="left">账    号：3602072309200158617<br/></p>
+					<p align="left">开户行：中国工商银行广州棠德支行<br/></p>
+					<p align="left">注意事项：缴费时请注明姓名、单位和单位统一社会信用代码。<br/></p>
+                </div>
+              </div>
+                <div id="contents" class="personnel2">
+                    <p class="organization">论坛组委会<br/></p>
+                            <p align="center">丁津泰&nbsp&nbsp王&emsp;杰&nbsp&nbsp孔凡玉&nbsp&nbsp冯荣权&nbsp&nbsp吕述望&nbsp&nbsp任&emsp;奎&nbsp&nbsp许春香<br/></p>
+                            <p align="center">李&emsp;超&nbsp&nbsp来学嘉&nbsp&nbsp吴文玲&nbsp&nbsp张方国&nbsp&nbsp陈克非&nbsp&nbsp林东岱&nbsp&nbsp胡&emsp;磊<br/></p>
+                            <p align="center">徐茂智&nbsp&nbsp徐秋亮&nbsp&nbsp高绪洪&nbsp&nbsp曹珍富&nbsp&nbsp戚文峰&nbsp&nbsp;薛&emsp;锐&nbsp&nbsp林&emsp;聪<br/></p>
+                            <br/><br/>
+                            <p class="organization">论坛组织<br/></p>
+                            <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                            <p align="center">黄琼 （华南农业大学）<br/></p>
+                    		<p align="center">唐春明 (广州大学)<br/></p>
+                    		<p align="center">蒋林智 (University of Surrey)<br/></p>
+                            <br/>
+                    <div class="section">
+                            <p align="left">论坛时间：2019年9月21-22日。<br/></p>
+                            <p align="left">论坛地点：嘉鸿华美达广场酒店(广州市天河区瘦狗岭路313号)<br/></p>
+                            <p align="left">报到时间：2019年9月20日 14：30 嘉鸿华美达广场酒店大堂。<br/></p>
+                            <p align="left">建议住宿：嘉鸿华美达广场酒店(单人间：450元/天，含早；标准间：450元/天，含早；)<br/></p>
+                            <p align="left">注册费用：注册费：1500元/人，参会人员交通和食宿自理。<br/></p>
+                            <p align="left">公司名称：广州翔羽会议策划服务有限公司<br/></p>
+                            <p align="left">账    号：3602072309200158617<br/></p>
+                    		<p align="left">开户行：中国工商银行广州棠德支行<br/></p>
+                    		<p align="left">注意事项：缴费时请注明姓名、单位和单位统一社会信用代码。<br/></p>
+                        </div>
+              </div>
+
+                <div id="contents" class="personnel3">
+                    <p class="organization">论坛组委会<br/></p>
+                            <p align="center">丁津泰&nbsp&nbsp王&emsp;杰&nbsp&nbsp孔凡玉&nbsp&nbsp冯荣权&nbsp&nbsp吕述望&nbsp&nbsp任&emsp;奎&nbsp&nbsp许春香<br/></p>
+                            <p align="center">李&emsp;超&nbsp&nbsp来学嘉&nbsp&nbsp吴文玲&nbsp&nbsp张方国&nbsp&nbsp陈克非&nbsp&nbsp林东岱&nbsp&nbsp胡&emsp;磊<br/></p>
+                            <p align="center">徐茂智&nbsp&nbsp徐秋亮&nbsp&nbsp高绪洪&nbsp&nbsp曹珍富&nbsp&nbsp戚文峰&nbsp&nbsp;薛&emsp;锐&nbsp&nbsp林&emsp;聪<br/></p>
+                            <br/><br/>
+                            <p class="organization">论坛组织<br/></p>
+                            <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                            <p align="center">黄琼 （华南农业大学）<br/></p>
+                    		<p align="center">唐春明 (广州大学)<br/></p>
+                    		<p align="center">蒋林智 (University of Surrey)<br/></p>
+                            <br/>
+                    <div class="section">
+                            <p align="left">论坛时间：2019年9月21-22日。<br/></p>
+                            <p align="left">论坛地点：嘉鸿华美达广场酒店(广州市天河区瘦狗岭路313号)<br/></p>
+                            <p align="left">报到时间：2019年9月20日 14：30 嘉鸿华美达广场酒店大堂。<br/></p>
+                            <p align="left">建议住宿：嘉鸿华美达广场酒店(单人间：450元/天，含早；标准间：450元/天，含早；)<br/></p>
+                            <p align="left">注册费用：注册费：1500元/人，参会人员交通和食宿自理。<br/></p>
+                            <p align="left">公司名称：广州翔羽会议策划服务有限公司<br/></p>
+                            <p align="left">账    号：3602072309200158617<br/></p>
+                    		<p align="left">开户行：中国工商银行广州棠德支行<br/></p>
+                    		<p align="left">注意事项：缴费时请注明姓名、单位和单位统一社会信用代码。<br/></p>
+                        </div>
+              </div>
+                <div class="main2">
+                                <div id="main2">
+                                    <div id="contents" class="personnel1">
+                            			<div class="section1">
+                                        <p>华南农业大学数学与信息学院<br/></p>
+                                        <p>2019年7月20日<br/></p>
+                		</div>
+                            	  </div>
+                                    <div id="contents" class="personnel2">
+                                        <div class="section1">
+                			<p>华南农业大学数学与信息学院<br/></p>
+                			<p>2019年7月20日<br/></p>
+                		</div>
+                                  </div>
+                            
+                                    <div id="contents" class="personnel3">
+                                        <div class="section1">
+                                                  <p>华南农业大学数学与信息学院<br/></p>
+                                                  <p>2019年7月20日<br/></p>
+                							</div>
+                                  </div>
+				<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		              </div> 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    let up1=document.getElementById('up1'),
+        down2=document.getElementById('down2');
+    //跨浏览器兼容事件处理器
+    var addHandler=function(element,type,handler){
+        if(addEventListener){
+            element.addEventListener(type,handler,false);
+        }
+        else if(attachEvent){
+            element.attachEvent('on'+type,handler);
+        }
+        else{
+            element['on'+type]=handler;
+        }
+    }
+    //向下图标的鼠标事件及点击事件监听器
+    addHandler(up1,"mouseover",()=>up1.style.border="2px solid wheat");
+
+    addHandler(up1,"click",()=>up1.style.border="2px dotted wheat");
+
+    addHandler(up1,"mouseout",()=>up1.style.border="");
+
+    addHandler(down2,"mouseover",()=>down2.style.border="2px solid wheat");
+
+    addHandler(down2,"click",()=>down2.style.border="2px dotted wheat");
+
+    addHandler(down2,"mouseout",()=>down2.style.border="");
+    window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
+</script>
+<script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
+</body>
+</html>
