--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -167,7 +167,70 @@
                     		<p align="left">注意事项：缴费时请注明姓名、单位和单位统一社会信用代码。<br/></p>
                         </div>
               </div>
-                
+                <div id="main3" >
+			                      <style type="text/css">
+			                          table.tableizer-table {
+			                              border: 1px solid #CCC;
+			                              font-family: Arial, Helvetica, sans-serif;
+			  			    margin: 0 auto;
+			  /* 			    width: 80%; */
+			  			    height: 100%;
+			                          }
+			                          .tableizer-table td {
+			                              padding: 4px;
+			                              margin: 3px;
+			                              max-width: 500px;
+			                              border: 1px solid #CCC;
+			                          }
+			                          .tableizer-table th {
+			                              background-color: #104E8B;
+			                              padding: 4px;
+			                              margin: 3px;
+			                              max-width: 500px;
+			                              color: #FFF;
+			                              font-weight: bold;
+			                              text-align: center;
+			                          }
+			                      </style>
+								  <div class="section">
+								  			<p align="left">第三届格与全同态加密国际前沿论坛日程<br/></p>
+								  			</div>
+			                      <table class="tableizer-table" style="margin-top: -50px;">
+			                          <thead><tr class="tableizer-firstrow"><td>时间</td><td colspan="3">内容</td></tr></thead>
+			                          <tbody>
+			                          <tr><th colspan="4">9月20日<br></th></tr>
+			                          <tr><td>&nbsp;14:00-22:00</td><td>注册、签到</td><td colspan="2">嘉鸿华美达广场酒店大堂</td></tr>
+									  <tr><th colspan="4">9月21日<br></th></tr>
+									  <tr><td>&nbsp;07:30-08:30</td><td>注册、签到</td><td colspan="2">华南农业大学数学与信息学院201报告厅</td></tr>
+			                          <tr><td rowspan="2">&nbsp;09:00-09:35</td><td colspan="3">报告1：赵运磊（复旦大学，教授）</td></tr>
+			                          <tr><td colspan="3">Standardization and Developments of Post-Quantum Cryptography</td></tr>
+									  <tr><td rowspan="2">&nbsp;09:35-10:10</td><td colspan="3">报告2：唐韶华（华南理工大学，教授）</td></tr>
+									  <tr><td colspan="3">Precomputation Methods for UOV Signature on Energy-Harvesting Sensors</td></tr>
+			                          <tr><th>10:10:10:30</th><th colspan="3">茶歇</th></tr>
+									  <tr><td rowspan="2">&nbsp;10:30-11:05</td><td colspan="3">报告3：王明强（山东大学，教授）</td></tr>
+									  <tr><td colspan="3">求解版本的模LWE到环LWE的规约</td></tr>
+									  <tr><td rowspan="2">&nbsp;11:05-11:40</td><td colspan="3">报告4：张江（密码科学技术国家重点实验室，副研究员）</td></tr>
+									  <tr><td colspan="3">格密码困难问题的经典和量子复杂度</td></tr>
+									  <tr><th>12:00-13:00</th><th>午餐</th><th colspan="2">地点：嘉鸿华美达广场酒店</th></tr>
+									  <tr><td rowspan="2">&nbsp;14:00-14:35</td><td colspan="3">报告5：路献辉（中科院信息工程研究所，研究员）</td></tr>
+									  <tr><td colspan="3">实用化全同态密码算法设计及其应用</td></tr>
+									  <tr><td rowspan="2">&nbsp;14:35-15:10</td><td colspan="3">报告6：陈隆（新泽西理工学院，博士后）</td></tr>
+									  <tr><td colspan="3"></td>更高效的多密钥全同态加密算法</tr>
+									  <tr><td rowspan="2">&nbsp;15:10-15:45</td><td colspan="3">报告7：贺婧楠（中科院信息工程研究所、南洋理工大学，助理研究员）</td></tr>
+									  <tr><td colspan="3">Lattice-based PKE/KEM Candidates in NIST Round 2</td></tr>
+									  <tr><th>15:45-16:00</th><th colspan="3">茶歇</th></tr>
+									  <tr><td rowspan="2">&nbsp;16:00-16:35</td><td colspan="3">报告8：张方国（中山大学，教授）</td></tr>
+									  <tr><td colspan="3">基于椭圆码的公钥加密方案</td></tr>
+									  <tr><td rowspan="2">&nbsp;16:35-17:10</td><td colspan="3">报告9：郁昱（上海交通大学，教授）</td></tr>
+									  <tr><td colspan="3">基于线性编码的抗碰撞哈希和并行压缩模式</td></tr>
+									  <tr><td rowspan="2">&nbsp;17:10-17:45</td><td colspan="3">报告10：潘彦斌（中科院数学与系统科学研究院，副研究员）</td></tr>
+									  <tr><td colspan="3">It All Started with Compression: Another Look at Reconciliation-Based LWE Key Exchange</td></tr>
+			  						  <tr><th>18:00-19:00</th><th>晚餐</th><th colspan="2">地点：嘉鸿华美达广场酒店</th></tr>
+									  <tr><th colspan="4">9月22日<br></th></tr>
+									  <tr><td>&nbsp;09:00-12:00</td><td>自由讨论</td><td colspan="2">华南农业大学数学与信息学院</td></tr>
+			  						</tbody>
+			                      </table>
+			                      </br></br>
 				<div class="footer4 removeborder">
 			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
