--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
-    <title>DSPP-2019</title>
+    <title>CSAC-2019</title>
     <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
@@ -78,16 +78,12 @@
     <div id="introdution">
         <div class="introdution">
             <div id="theme">
-                            <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                             <p style="text-indent:2em ">安全多方计算是实现用户隐私保护计算的重要途径，也是网络空间安全研究的热点。本届论坛旨在聚集国内外从事安全多方计算的一批学者，就安全多方计算的研究现状、未来及应用展开交流和讨论。论坛将邀请国内外12位从事安全多方计算的学者。每位邀请的报告人将做40分钟的论坛邀请报告。<br/>
-                                &nbsp; &nbsp; &nbsp; &nbsp;报告的主题主要涉及以下几个方面：<br/>
-                                &nbsp; &nbsp; &nbsp; &nbsp;(1) 安全多方计算的理论研究及其进展<br/>
-                                &nbsp; &nbsp; &nbsp; &nbsp;(2) 后量子时代的安全多方计算理论<br/>
-                                &nbsp; &nbsp; &nbsp; &nbsp;(3) 量子安全多方计算<br/>
-                                &nbsp; &nbsp; &nbsp; &nbsp;(4) 安全多方计算的应用<br/>
+                                &nbsp; &nbsp; &nbsp; &nbsp;报告的主题主要涉及以下几个方面：(1) 安全多方计算的理论研究及其进展; (2) 后量子时代的安全多方计算理论; (3) 量子安全多方计算; (4) 安全多方计算的应用<br/>
                             </p>
                         </div> 
-        </div>
+            </div>
         <div class="main2">
             <div id="main2">
                 <div id="contents" class="personnel1">
