--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -84,7 +84,7 @@
                 <p style="text-align: center;text-indent:2em; " >-密码与编码前沿国际研讨会-2021</p>
                 <hr/>
                 <p style="text-indent:2em; line-height:150%;"  >密码学与编码学作为信息领域实现通讯与通讯安全保障的重要科学支撑。随着大数据、区块链、量子计算、人工智能和新型硬件设计等学科在科学与技术的快速发展。如何保障未来通讯的数据传输、安全与高效利用是学术界与工业界研究的热点问题。<br/>
-                    &emsp; &emsp;密码与编码前沿国际研讨会-2021特邀报告涉及领域包括：网络空间安全理论；网络攻防理论与实践；密码理论；密码算法设计；密码算法的硬件实现与安全；量子通信；区块链与应用；大数据与隐私保护等热点研究领域。本届国际论坛将邀请29位国内外著名学者做特邀报告(40分钟)，报告对上述研究领域进行深入地交流与探讨。同时，本届会议招收数名暑期班学员，邀请相关领域的老师讲授代数数论、有限域及其应用，编码理论及其应用，格与全同态加密课程。暑期班为期15天，采用全天网络授课。会议和暑期班采用网络视频会议形式举办。热烈欢迎国内外相关研究领域的老师，博士生/硕士生和公司从业人员参加本届论坛和暑期班课程。
+                    &emsp; &emsp;密码与编码前沿国际研讨会-2021特邀报告涉及领域包括：网络空间安全理论；网络攻防理论与实践；密码理论；密码算法设计；密码算法的硬件实现与安全；量子通信；区块链与应用；大数据与隐私保护等热点研究领域。本届国际论坛将邀请12位海内外学者做特邀报告(45分钟)，报告对上述研究领域进行深入地交流与探讨。热烈欢迎国内外相关研究领域的老师，博士生/硕士生和公司从业人员积极投和报名参加本届论坛。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div>
