--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -115,9 +115,10 @@
                     <p align="left">会议举办时间：2021年10月30日-2021年10月31日。<br/></p>
                     <p align="left">投稿截止时间：2021年10月28日。<br/></p>
 </div>
-               
+               <div class="footer4 removeborder">
 			 <p style="text-align:center;margin-top: -20px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
-		
+			
+		</div> 
 <script>
     let up1=document.getElementById('up1'),
         down2=document.getElementById('down2');
