--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -119,6 +119,7 @@
 			 <p style="text-align:center;margin-top: -20px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div> 
+	</div> 
 <script>
     let up1=document.getElementById('up1'),
         down2=document.getElementById('down2');
