--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -80,7 +80,7 @@
             <div id="theme">
 <!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
-                <p style="text-align: center; margin-top: 10px;" >International Coding and Cryptography Symposium-2021</p>
+                <p style="text-align: center; margin-top: 10px;" >International Coding and Cryptography Conference-2021</p>
                 <p style="text-align: center;text-indent:2em; " >-密码与编码前沿国际研讨会-2021</p>
                 <hr/>
                 <p style="text-indent:2em; line-height:150%;"  >密码学与编码学作为信息领域实现通讯与通讯安全保障的重要科学支撑。随着大数据、区块链、量子计算、人工智能和新型硬件设计等学科在科学与技术的快速发展。如何保障未来通讯的数据传输、安全与高效利用是学术界与工业界研究的热点问题。<br/>
