--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -100,14 +100,15 @@
                    <p style="text-indent:2em; line-height:150%;"  >5. Cryptographic Theory;<br/>
                    <p style="text-indent:2em; line-height:150%;"  >6. Cryptographic Algortihm and Analysis;<br/>
                    <p style="text-indent:2em; line-height:150%;"  >7. Cryptographic Scheme Design;<br/>
-	           <p style="text-indent:2em; line-height:150%;"  >8. Zero-knowledge and Application;<br/>
-	           <p style="text-indent:2em; line-height:150%;"  >9. Security Proof and Application;<br/>
-                   <p style="text-indent:2em; line-height:150%;"  >10. Quantum Communication and Quantum Computation;<br/>
-		    <p style="text-indent:2em; line-height:150%;"  >11. Blockchain and Application;<br/>
-                    <p style="text-indent:2em; line-height:150%;"  >12. Blockchain Security;<br/>
-                   <p style="text-indent:2em; line-height:150%;"  >13. Big Data analysis, Application and Security;<br/>
-	           <p style="text-indent:2em; line-height:150%;"  >14. Internet of Things, Application and Security;<br/>
-	           <p style="text-indent:2em; line-height:150%;"  >15. Privacy-preserving Computing;<br/>
+	            <p style="text-indent:2em; line-height:150%;"  >8. Cryptographic Chip Design and Security;<br/>
+	           <p style="text-indent:2em; line-height:150%;"  >9. Zero-knowledge and Application;<br/>
+	           <p style="text-indent:2em; line-height:150%;"  >10. Security Proof and Application;<br/>
+                   <p style="text-indent:2em; line-height:150%;"  >11. Quantum Communication and Quantum Computation;<br/>
+		    <p style="text-indent:2em; line-height:150%;"  >12. Blockchain and Application;<br/>
+                    <p style="text-indent:2em; line-height:150%;"  >13. Blockchain Security;<br/>
+                   <p style="text-indent:2em; line-height:150%;"  >14. Big Data analysis, Application and Security;<br/>
+	           <p style="text-indent:2em; line-height:150%;"  >15. Internet of Things, Application and Security;<br/>
+	           <p style="text-indent:2em; line-height:150%;"  >16. Privacy-preserving Computing;<br/>
 			    </p>
             </div>
         </div>
