--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -80,11 +80,11 @@
             <div id="theme">
 <!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
-                <p style="text-align: center; margin-top: 10px;" >International Coding and Cryptography Conference-2021</p>
-                <p style="text-align: center;text-indent:2em; " >-密码与编码前沿国际研讨会-2021</p>
+                <p style="text-align: center; margin-top: 10px;" >International Cybersecurity and Applied Cryptography Conference-2021</p>
+                <p style="text-align: center;text-indent:2em; " >-网络空间安全与应用密码学国际研讨会-2021</p>
                 <hr/>
-                <p style="text-indent:2em; line-height:150%;"  >密码学与编码学作为信息领域实现通讯与通讯安全保障的重要科学支撑。随着大数据、区块链、量子计算、人工智能和新型硬件设计等学科在科学与技术的快速发展。如何保障未来通讯的数据传输、安全与高效利用是学术界与工业界研究的热点问题。<br/>
-                 <p style="text-indent:2em; line-height:150%;"  >密码与编码前沿国际研讨会-2021特邀报告涉及领域包括：网络空间安全理论；网络攻防理论与实践；密码理论；密码算法设计；密码算法的硬件实现与安全；量子通信；区块链与应用；大数据与隐私保护等热点研究领域。本届国际论坛将邀请12位海内外学者做特邀报告(45分钟)，报告对上述研究领域进行深入地交流与探讨。热烈欢迎国内外相关研究领域的老师，博士生/硕士生和公司从业人员积极投稿和报名参加本届论坛。<br/>
+                <p style="text-indent:2em; line-height:150%;"  >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
+                 <p style="text-indent:2em; line-height:150%;"  >网络空间安全与应用密码学国际研讨会-2021特邀报告和交流报告涉及领域包括：网络空间安全理论；网络攻防理论与实践；密码理论；密码算法设计；密码算法的硬件实现与安全；量子通信；区块链与应用；大数据与隐私保护等热点研究领域。本届国际论坛将邀请12位海内外学者做特邀报告(45分钟)，报告对上述研究领域进行深入地交流与探讨。热烈欢迎国内外相关研究领域的老师，博士生/硕士生和公司从业人员积极投稿和报名参加本届论坛。<br/>
 		<p style="text-indent:2em; line-height:150%;"  >会议投稿论文将以预印本形式汇聚成会议论文集（中英文稿件均可）。投稿稿件主要用于会议交流，不影响投稿到其它会议或者期刊。<br/>
 	        <p align="left">投稿截止时间：2021年10月28日;<br/></p>
 		 <p align="left">投稿联系邮箱：ruizhian@hotmail.com<br/></p>
