--- a/CSAC-2021.html
+++ b/CSAC-2021.html
@@ -113,7 +113,7 @@
             </div>
         </div>
               		
-                    <p class="organization" align="center">会议组织和筹备主席<br/></p>
+                    <p class="organization" align="center">会议组织和筹备<br/></p>
                     <p align="center">蒋林智<br/></p>
                    
 		    <div class="section">
