--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
-    <title>QPQC-2019</title>
+    <title>QCPQC-2019</title>
     <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
