--- a/CC-2020.html
+++ b/CC-2020.html
@@ -180,15 +180,15 @@
 			    height: 100%;
                         }
                         .tableizer-table td {
-                            padding: 4px;
-                            margin: 3px;
+/*                             padding: 4px;
+                            margin: 3px; */
                             max-width: 500px;
                             border: 1px solid #CCC;
                         }
                         .tableizer-table th {
                             background-color: #104E8B;
-                            padding: 4px;
-                            margin: 3px;
+/*                             padding: 4px;
+                            margin: 3px; */
                             max-width: 500px;
                             color: #FFF;
                             font-weight: bold;
