--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -35,8 +35,8 @@
 		 margin: 0 22%;
 	    }
 	.section1{
-			 margin-left: 900px;
-		         margin-top:100px;
+			 margin-left: 275px;
+		         margin-bottom:80px;
 	}
 	</style>
 </head>
