--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -35,8 +35,7 @@
 		 margin: 0 22%;
 	    }
 	.section1{
-			 margin-left: 275px;
-		         margin-bottom:80px;
+			text-align:center;
 	}
 	</style>
 </head>
