--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -35,7 +35,7 @@
 		 margin: 0 22%;
 	    }
 	.section1{
-			text-align:center;
+			margin-left: 25%;
 		        margin-bottom:80px;
 		        margin-top:10px;
 	}
