--- a/QPQC-2017.html
+++ b/QPQC-2017.html
@@ -80,7 +80,7 @@
             <div id="theme">
 <!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
-                <p style="text-align: center; margin-top: 10px;" >报告题目：快速全同态公钥加密算法</p>
+                <p style="text-align: center; margin-top: 1%;" >报告题目：快速全同态公钥加密算法</p>
                 <hr/>
 				<p style="text-indent:2em; line-height:150%;"  >报告摘要：全同态密码是密码学中的长期公开问题，直到2009年才由Gentry给出了一个全同态密码的理论上的构造。针对现有的全同态公钥密码密文扩展大、密文长、密钥长、同态计算密文更新效率低等问题，基于二元截断多项式环给出了一个快速全同态公钥密码的构造。<br/>
 				&nbsp; &nbsp; 报告人简介：王保仓，1979年3月生，河南郸城人，西安电子科技大学通信工程学院/综合业务网理论与关键技术国家重点实验室 密码学专业教授、博士生/硕士生导师，2006年12月获西安电子科技大学密码学专业博士学位。科技部重点研发计划项目课题负责人，主持国家自然科学基金项目3项，主持十三五预研项目、十二五预研项目、陕西省自然基金、华为高校合作重点项目、中电集团30所、54所高校合作项目等。中国密码学会会员。<br/>
