--- a/QPQC-2018.html
+++ b/QPQC-2018.html
@@ -80,7 +80,7 @@
             <div id="theme">
 <!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
-                <p style="text-align: center; margin-top: 10px;" >第二届全同态加密及其应用前沿论坛日程</p>
+                <p style="text-align: center; margin-top: 1%;" >第二届全同态加密及其应用前沿论坛日程</p>
                 <hr/>
             </div>
         </div>
