--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -294,7 +294,7 @@
                     </tr>
                 </tbody>
                 </table>
-                <table class="table">
+                <table class="table" style="margin-top: -1%;">
                 <caption>住宿信息</caption>
                 <tbody >
                     <tr><td style="width: 50%;text-indent: 2em">国际研讨会住宿推荐酒店：<a href="https://map.baidu.com/poi/%E4%B8%AD%E8%B5%A2%E9%93%82%E9%87%91%E7%9A%87%E5%86%A0%E5%81%87%E6%97%A5%E9%85%92%E5%BA%97/@13383000.819019148,3507869.6617725194,18.9z?uid=4026ab4b01281554220220ae&primaryUid=15735708514291461712&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl"><i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 杭州中赢铂金皇冠假日酒店（杭州市滨江区春晓路61号）。房间类型：大床房（500元/间），标准间（500元/间）。<a href="https://map.baidu.com/poi/%E6%9D%AD%E5%B7%9E%E6%98%8E%E8%B1%AA%E5%9B%BD%E9%99%85%E9%85%92%E5%BA%97/@13381813.110803857,3508730.8,19z?uid=b60796c23835904296f08c4a&primaryUid=689557317641610913&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl"><i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i>杭州明豪国际酒店（杭州滨江区江南大道558号）。实际收费标准按照酒店当日定价标准。会务组会为您预留房间，请电话联系酒店确认预订房间（报会议名称）。
@@ -303,7 +303,7 @@
                 </tbody>
                 </table>
 
-                <table class="table table3">
+                <table class="table table3" style="margin-top: -1%;">
                     <caption>
                             会议赞助与合作联系: 蒋林智； linzjiang#hotmail dot com
                     </caption>
@@ -363,7 +363,7 @@
                     <br/>
                 </p>-->
 		<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 5px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div> 
         </div>	
