--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -308,7 +308,7 @@
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px; ">
-                                <caption style="">住宿信息</caption>
+                                <caption style="margin-top: -1%;">住宿信息</caption>
                                 <tbody style="width: 73.5%;">
                                 <tr style="">
                                     <td style="width: 10%;">  </td>
@@ -318,7 +318,7 @@
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px;">
-                                <caption style="">会议赞助与合作：</caption>
+                                <caption style="margin-top: -1%;">会议赞助与合作：</caption>
                                 <tbody style="width: 73.5%;">
                                 <tr>
                                     <td style="width: 5%;">  </td>
