--- a/QPQC-2020.html
+++ b/QPQC-2020.html
@@ -137,7 +137,7 @@
                             <p align="left">会议合作联系：蒋林智（University of Surrey），linzjiang@hotmail.com<br/></p>
                         </div>
               </div>
-                <p style="text-align: center; margin-top: 10px;" >特邀报告及特邀报告人简介</p>
+                <p style="text-align: center; margin-top: -1%;" >特邀报告及特邀报告人简介</p>
                 <p style="text-align: center;text-indent:2em; " >潘彦斌 副研究员 数学与系统科学研究</p>
                 <hr/>
                     <p style="text-indent:2em; line-height:150%;"  >Talk Title：A Uniform Formal Framework for Lattice-Based Cryptosystems<br/>
@@ -245,7 +245,7 @@
 					                            text-align: center;
 					                        }
 					                    </style>
-					                    <table class="tableizer-table" style="margin-top: -80px;">
+					                    <table class="tableizer-table" style="margin-top: -50px;">
 					                        <thead><tr class="tableizer-firstrow"><td>时间(北京)</td><td colspan="3">会议报告</td</tr></thead>
 					                        <tbody>
 					                        <tr><th colspan="4">01月02日（会议地点：网络视频会议室）</th></tr>
