--- a/SMPC-2018.html
+++ b/SMPC-2018.html
@@ -34,6 +34,11 @@
 	 .section{
 		 margin: 0 22%;
 	    }
+	 .section1{
+			margin-left: 25%;
+			margin-bottom:80px;
+			margin-top:10px;
+	}
 	</style>
 </head>
 
@@ -165,7 +170,7 @@
                             text-align: center;
                         }
                     </style>
-					<div class="section">
+					<div class="section1">
 					        <p>特邀报告安排表</p><br/>
 					</div>
                     <table class="tableizer-table" style="margin-top: -80px;">
@@ -199,7 +204,7 @@
 					 
 					  </div>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center" style="margin-top: -1%;><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 		              </div> 
                         </div>
                     </div>
