--- a/SMPC-2018.html
+++ b/SMPC-2018.html
@@ -37,7 +37,7 @@
 	 .section1{
 			margin-left: 25%;
 			margin-bottom:80px;
-			margin-top:10px;
+			margin-top:-15%;
 	}
 	</style>
 </head>
@@ -173,7 +173,7 @@
 					<div class="section1">
 					        <p>特邀报告安排表</p><br/>
 					</div>
-                    <table class="tableizer-table" style="margin-top: -1%;">
+                    <table class="tableizer-table" style="margin-top: -7%;">
                         <thead><tr class="tableizer-firstrow"><td>报告时间</td><td>报告标题</td><td>特邀报告人</td></tr></thead>
                         <tbody>
                         <tr><td>4月6日上午8:00- 8:40<br></td><td>基于比特币的安全多方计算协议</td><td>唐春明（广州大学）</td></tr>
@@ -204,7 +204,7 @@
 					 
 					  </div>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center" style="margin-top: -1%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center" style="margin-top: -7%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 		              </div> 
                         </div>
                     </div>
