--- a/SMPC-2018.html
+++ b/SMPC-2018.html
@@ -204,7 +204,7 @@
 					 
 					  </div>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center" style="margin-top: -20%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center" style="margin-top: -20%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 		              </div> 
                         </div>
                     </div>
