--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -34,6 +34,11 @@
 		.section{
 			margin: 0 22%;
 		}
+	    .section1{
+                           margin-left: 25%;
+                           margin-bottom:80px;
+                           margin-top:-15%;
+                     }     
 	</style>
 </head>
 
@@ -138,7 +143,7 @@
 			<div class="section">
 			<p align="left">会议组委会<br/></p>
 			</div>
-                    <table class="tableizer-table" > 
+                    <table class="tableizer-table" style="margin-top: -8%;" > 
                         <tbody>
                         <tr ><td style="width: 335px;">来学嘉（上海交通大学）</td><td style="width:335px;">陈克非（杭州师范大学）</td></tr>
 						<tr><td style="width: 335px;">吴文玲（中科院软件所）</td><td style="width: 335px;">冯荣权（北京大学）</td></tr>
