--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -205,7 +205,7 @@
                                           <p align="right">2018年4月30日<br/></p>
 									</div>
                           </div>
-				<div class="footer4 removeborder" style="margin-top: -80px;">
+				<div class="footer4 removeborder">
 			 <p style="text-align:center" ><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
