--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -37,7 +37,7 @@
 	    .section1{
                            margin-left: 25%;
                            margin-bottom:80px;
-                           margin-top:-25%;
+                           margin-top:-39%;
                      }     
 	</style>
 </head>
@@ -206,7 +206,7 @@
 									</div>
                           </div>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center;margin-top: 20%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center;margin-top: 20%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin-top: 20%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
                         </div>
