--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -37,7 +37,7 @@
 	    .section1{
                            margin-left: 25%;
                            margin-bottom:80px;
-                           margin-top:-80%;
+                           margin-top:-15%;
                      }     
 	</style>
 </head>
@@ -140,7 +140,7 @@
                             text-align: center;
                         }
                     </style>
-			<div class="section">
+			<div class="section1">
 			<p align="left">会议组委会<br/></p>
 			</div>
                     <table class="tableizer-table" style="margin-top: -11%;" > 
