--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -201,8 +201,8 @@
                                       
                                           <p align="left">诚邀密码学及信息安全领域广大学者、业界精英、工程技术人员和在校研究生参会！<br/></p>
 					  <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
-                                          <p align="right">华东师范大学计算机科学与软件工程学院<br/></p>
-                                          <p align="right">2018年4月30日<br/></p>
+<!--                                           <p align="right">华东师范大学计算机科学与软件工程学院<br/></p>
+                                          <p align="right">2018年4月30日<br/></p> -->
 									</div>
                           </div>
 				<div class="footer4 removeborder">
