--- a/News.html
+++ b/News.html
@@ -147,7 +147,7 @@
                                          <li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with Qirange Company!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**Summer Training Camp Starts!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with FTG Research Group!</a></li>
-                                         <li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
+                                         <li><a href="" style="width: 70%; font-size: 15px;">**FTG Research Group Joins EAPIAC Alliance!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
                                          <li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
@@ -162,7 +162,8 @@
 				<p style="margin: 0 180px;">Research News</p>
 				 <div id="news1" onmouseover="tz1()" onmouseout="ks1()">
 				 <ul id="p11">
-				 <li><a href="" style="width: 70%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
+				<li><a href="QPQC-2021.html" style="width: 70%; font-size: 15px;">**QCPQC Conference-2021-Call for paper!</a></li>
+				 <li><a href="CSAC-2021.html" style="width: 70%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
 				 <li><a href="" style="width: 70%; font-size: 15px;">**DSPP Conference-2021!</a></li>
 				 <li><a href="" style="width: 70%; font-size: 15px;">**CCC Conference-2021!</a></li>
 				<li><a href="" style="width: 70%; font-size: 15px;">**QPQC Conference-2021!</a></li>
@@ -181,15 +182,15 @@
 						<p style="margin: 0 180px;">News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
-							<li><a href="" style="width: 70%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
-							<li><a href="" style="width: 70%; font-size: 15px;">**QPQC Conference-2021!</a></li>
+							<li><a href="CSAC-2021.html" style="width: 70%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
+							<li><a href="QPQC-2021.html" style="width: 70%; font-size: 15px;">**QPQC Conference-2021-Call for paper!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DSPP Conference-2021!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**CCC Conference-2021!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Joins EAPIAC Alliance!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with Qirange Company!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**Summer Training Camp Start!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**DFSC Center Cooperates with FTG Research Group!</a></li>
-							<li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 70%; font-size: 15px;">**FTG Research Group Joins EAPIAC Alliance!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
 							<li><a href="" style="width: 70%; font-size: 15px;">**News!</a></li>
