--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -38,6 +38,7 @@
 			margin-left: 25%;
 		        margin-bottom:80px;
 		        margin-top:-15%;
+		        margin-bottom: 8%;
 	}
 	</style>
 </head>
