--- a/QPQC-2020.html
+++ b/QPQC-2020.html
@@ -106,7 +106,36 @@
                     <p align="left">会议合作联系：蒋林智（University of Surrey），linzjiang@hotmail.com<br/></p>
 	        </div>
               </div>
-              
+               <div id="contents" class="personnel2">
+                    <p class="organization" align="center">论坛组委会（排名不分先后顺序）<br/></p>
+                    <p align="center">邢朝平&nbsp&nbsp冯荣权&nbsp&nbsp许春香&nbsp&nbsp张&emsp;磊&nbsp&nbsp林东岱&nbsp&nbsp温伟强&nbsp&nbsp李丽香<br/></p>
+                    <p align="center">王丽萍&nbsp&nbsp徐秋亮&nbsp&nbsp王华雄&nbsp&nbsp陈利群&nbsp&nbsp唐&emsp;强&nbsp&nbsp林&emsp;聪&nbsp&nbsp高&emsp;飞<br/></p>
+                    <br/><br/>
+                    <p class="organization" align="center">论坛组织与筹备<br/></p>
+                    <p align="center">蒋林智（University of Surrey）<br/></p>
+			<br/>
+		    <div class="section">
+                    <p align="left">会议举办时间：2021年01月02日-01月03日<br/></p>
+                    <p align="left">冬令营班时间：2021年01月20日-02月04日<br/></p>
+                    <p align="left">会议举办地点：腾讯云会议室。会议采用网络视频会议形式（中国-腾讯会议，海外- VooV Meeting）<br/></p>
+                    <p align="left">会议合作联系：蒋林智（University of Surrey），linzjiang@hotmail.com<br/></p>
+	        </div>
+              </div>
+		     <div id="contents" class="personnel3">
+                    <p class="organization" align="center">论坛组委会（排名不分先后顺序）<br/></p>
+                    <p align="center">邢朝平&nbsp&nbsp冯荣权&nbsp&nbsp许春香&nbsp&nbsp张&emsp;磊&nbsp&nbsp林东岱&nbsp&nbsp温伟强&nbsp&nbsp李丽香<br/></p>
+                    <p align="center">王丽萍&nbsp&nbsp徐秋亮&nbsp&nbsp王华雄&nbsp&nbsp陈利群&nbsp&nbsp唐&emsp;强&nbsp&nbsp林&emsp;聪&nbsp&nbsp高&emsp;飞<br/></p>
+                    <br/><br/>
+                    <p class="organization" align="center">论坛组织与筹备<br/></p>
+                    <p align="center">蒋林智（University of Surrey）<br/></p>
+			<br/>
+		    <div class="section">
+                    <p align="left">会议举办时间：2021年01月02日-01月03日<br/></p>
+                    <p align="left">冬令营班时间：2021年01月20日-02月04日<br/></p>
+                    <p align="left">会议举办地点：腾讯云会议室。会议采用网络视频会议形式（中国-腾讯会议，海外- VooV Meeting）<br/></p>
+                    <p align="left">会议合作联系：蒋林智（University of Surrey），linzjiang@hotmail.com<br/></p>
+	        </div>
+              </div>
 					<div id="main3" >
 					                    <style type="text/css">
 					                        table.tableizer-table {
