--- a/QPQC-2020.html
+++ b/QPQC-2020.html
@@ -201,6 +201,9 @@
         </div>
     </div>
 </div>
+</div>
+</div>
+</div>
 <script>
     let up1=document.getElementById('up1'),
         down2=document.getElementById('down2');
